--- a/SharePointDemo/SharePointDemo.csproj
+++ b/SharePointDemo/SharePointDemo.csproj
@@ -3,13 +3,17 @@
     <TargetFramework>net461</TargetFramework>
     <AzureFunctionsVersion>v1</AzureFunctionsVersion>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningsAsErrors>NU1605</WarningsAsErrors>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ActiveDirectory.GraphClient" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.22" />
     <PackageReference Include="Microsoft.Sharepoint.Client.Runtime" Version="15.0.4711.1000" />
     <PackageReference Include="Microsoft.SharePointOnline.CSOM" Version="16.1.8119.1200" />
     <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="SharePointPnP.IdentityModel.Extensions" Version="1.2.3" />
     <PackageReference Include="SharePointPnPCoreOnline" Version="3.2.1810" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
@@ -28,7 +32,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Scripts\" />
     <Folder Include="Services\" />
   </ItemGroup>
 </Project>
