--- a/SharePointDemo/SharePointDemo.csproj
+++ b/SharePointDemo/SharePointDemo.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Services\" />
   </ItemGroup>
 </Project>
